Review the logic to renew the ApiToken and request about a new  one every 30s. Sleep time is now working
Signed-off-by: cmoulliard <cmoulliard@redhat.com>